[gd_scene format=4 uid="uid://c1e7sx3yc3jse"]

[ext_resource type="Script" uid="uid://vl3sxoylpicp" path="res://scripts/game.gd" id="1_p57ef"]
[ext_resource type="PackedScene" uid="uid://bscfmqhblkamj" path="res://scenes/player.tscn" id="1_uwrxv"]
[ext_resource type="PackedScene" uid="uid://n8r3fs1np7yu" path="res://scenes/cursor.tscn" id="2_lnu2h"]
[ext_resource type="Texture2D" uid="uid://cod6ppkby6116" path="res://assets/map/tiles.png" id="2_yqjtg"]
[ext_resource type="Texture2D" uid="uid://cb7c2s2nkafqd" path="res://assets/map/water_spritesheet.png" id="3_u5sy4"]
[ext_resource type="PackedScene" uid="uid://drm0ljm7eq57t" path="res://scenes/hud.tscn" id="4_lbhrr"]
[ext_resource type="PackedScene" uid="uid://mre4faygt0rf" path="res://scenes/hotbar.tscn" id="6_p57ef"]
[ext_resource type="PackedScene" uid="uid://c40cjxyw2c7v4" path="res://scenes/inventory.tscn" id="7_u5sy4"]
[ext_resource type="PackedScene" uid="uid://sjan3eivecdw" path="res://scenes/startscreen.tscn" id="8_gee14"]
[ext_resource type="AudioStream" uid="uid://b74c3phi567ur" path="res://Audio/Background Music/BGM1 (Minuet Slow).mp3" id="10_vtaks"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u5sy4"]
resource_name = "tiles"
texture = ExtResource("2_yqjtg")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
7:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
0:23/0 = 0
1:23/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
0:24/0 = 0
1:24/0 = 0
2:24/0 = 0
3:24/0 = 0
4:24/0 = 0
0:25/0 = 0
1:25/0 = 0
2:25/0 = 0
3:25/0 = 0
4:25/0 = 0
0:26/0 = 0
1:26/0 = 0
2:26/0 = 0
3:26/0 = 0
4:26/0 = 0
7:2/size_in_atlas = Vector2i(2, 2)
7:2/0 = 0
9:2/size_in_atlas = Vector2i(2, 2)
9:2/0 = 0
7:4/size_in_atlas = Vector2i(2, 2)
7:4/0 = 0
9:4/size_in_atlas = Vector2i(2, 2)
9:4/0 = 0
5:20/size_in_atlas = Vector2i(2, 4)
5:20/0 = 0
8:20/size_in_atlas = Vector2i(2, 4)
8:20/0 = 0
5:12/size_in_atlas = Vector2i(2, 2)
5:12/0 = 0
7:12/size_in_atlas = Vector2i(1, 2)
7:12/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gee14"]
texture = ExtResource("3_u5sy4")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0
1:2/0 = 0

[sub_resource type="TileSet" id="TileSet_lbhrr"]
sources/0 = SubResource("TileSetAtlasSource_u5sy4")
sources/1 = SubResource("TileSetAtlasSource_gee14")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yqjtg"]
texture = ExtResource("2_yqjtg")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
7:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
0:12/0 = 0
0:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:12/0 = 0
1:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:12/0 = 0
2:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:12/0 = 0
3:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:12/0 = 0
4:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
0:13/0 = 0
0:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:13/0 = 0
2:13/0 = 0
2:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
0:14/0 = 0
0:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:14/0 = 0
1:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:14/0 = 0
2:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
0:18/0 = 0
0:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:18/0 = 0
1:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:18/0 = 0
2:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:18/0 = 0
3:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:18/0 = 0
4:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
0:19/0 = 0
0:19/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:19/0 = 0
2:19/0 = 0
2:19/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
0:20/0 = 0
0:20/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:20/0 = 0
1:20/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:20/0 = 0
2:20/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:20/0 = 0
4:20/0 = 0
0:21/0 = 0
0:21/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.8528147, 4.264073, 1.0964766, 0.7715936, 3.2894278, -0.7715945, 8, -0.9340353, 8, 8, 1.4213581, 8, 0.040610313, 8)
1:21/0 = 0
1:21/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -1.913043, -4.933638, -2.2486649, 3.1212816, -2.0472918, 8, -0.9340353, 8, 8, 1.4213581, 8, -8, 8)
2:21/0 = 0
2:21/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -1.2418003, -4.933638, -2.2486649, -2.4772234, -2.4772234, 0.5279331, 0.36549187, -0.36549187, 4.5077333, 1.4213581, 8, -8, 8)
3:21/0 = 0
3:21/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:21/0 = 0
4:21/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:22/0 = 0
0:22/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2.70261, 3.5871, -1.7198429, -0.6387987, -0.14741516, -4.275038, -0.9336281, -6.044019, -0.83535194, -8, 8, -8, 8, 8, 1.4213581, 8, -2.0146723, 8)
1:22/0 = 0
2:22/0 = 0
2:22/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 0.4467125, -8, -0.77159405, -5.157498, 1.3401375, 0.28427124, 1.4213581, 8, -8, 8)
3:22/0 = 0
3:22/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:22/0 = 0
4:22/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:23/0 = 0
0:23/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.93362904, 0.83535194, -1.7198429, -0.6387987, -0.14741516, -4.275038, -0.9336281, -6.044019, -0.83535194, -8, 8, -8, 8, 5.552636, 4.275038, 4.1767607, 2.0146732, 3.0957174)
1:23/0 = 0
1:23/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:23/0 = 0
2:23/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 0.4467125, -8, 2.802105, -4.426514, 3.6143093, -1.7462397, -0.28427124, 3.451868, -8, 8)
3:23/0 = 0
3:23/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:23/0 = 0
4:23/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:24/0 = 0
0:24/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.8528147, 4.264073, 1.0964766, 0.7715936, 3.2894278, -0.7715945, 8, -0.9340353, 8, 8, 1.4213581, 8, 0.040610313, 8)
1:24/0 = 0
1:24/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -1.913043, -4.933638, -2.2486649, 3.1212816, -2.0472918, 8, -0.9340353, 8, 8, 1.4213581, 8, -8, 8)
2:24/0 = 0
2:24/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -1.2418003, -4.933638, -2.2486649, -2.4772234, -2.4772234, 0.5279331, 0.36549187, -0.36549187, 4.5077333, 1.4213581, 8, -8, 8)
3:24/0 = 0
3:24/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:24/0 = 0
4:24/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:25/0 = 0
0:25/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2.70261, 3.5871, -1.7198429, -0.6387987, -0.14741516, -4.275038, -0.9336281, -6.044019, -0.83535194, -8, 8, -8, 8, 8, 1.4213581, 8, -2.0146723, 8)
1:25/0 = 0
2:25/0 = 0
2:25/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 0.4467125, -8, -0.77159405, -5.157498, 1.3401375, 0.28427124, 1.4213581, 8, -8, 8)
3:25/0 = 0
3:25/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:25/0 = 0
4:25/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:26/0 = 0
0:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.93362904, 0.83535194, -1.7198429, -0.6387987, -0.14741516, -4.275038, -0.9336281, -6.044019, -0.83535194, -8, 8, -8, 8, 5.552636, 4.275038, 4.1767607, 2.0146732, 3.0957174)
1:26/0 = 0
1:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:26/0 = 0
2:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 0.4467125, -8, 2.802105, -4.426514, 3.6143093, -1.7462397, -0.28427124, 3.451868, -8, 8)
3:26/0 = 0
3:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:26/0 = 0
4:26/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:5/0 = 0
7:19/0 = 0
7:2/size_in_atlas = Vector2i(2, 2)
7:2/0 = 0
9:2/size_in_atlas = Vector2i(2, 2)
9:2/0 = 0
7:4/size_in_atlas = Vector2i(2, 2)
7:4/0 = 0
9:4/size_in_atlas = Vector2i(2, 2)
9:4/0 = 0
5:20/size_in_atlas = Vector2i(2, 4)
5:20/0 = 0
8:20/size_in_atlas = Vector2i(2, 4)
8:20/0 = 0
7:23/0 = 0
10:23/0 = 0

[sub_resource type="TileSet" id="TileSet_lnu2h"]
physics_layer_0/collision_layer = 2
sources/0 = SubResource("TileSetAtlasSource_yqjtg")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_uwrxv"]
distance = -79.0

[node name="Game" type="Node2D" unique_id=1101210002]
script = ExtResource("1_p57ef")

[node name="Layer1" type="TileMapLayer" parent="." unique_id=1063603332]
position = Vector2(146, -96)
tile_map_data = PackedByteArray("AAD3/wUAAAAFAAkAAAD4/wUAAAAGAAoAAAD5/wUAAAAFAAkAAAD6/wUAAAAFAAsAAAD7/wUAAAAFAAoAAAD8/wUAAAAFAAsAAAD9/wUAAAAFAAsAAAD+/wUAAAAFAAoAAAD//wUAAAAFAAsAAAAAAAUAAAAFAAsAAAABAAUAAAAFAAsAAAACAAUAAAAGAAsAAAADAAUAAAAGAAsAAAAEAAUAAAAGAAoAAAAFAAUAAAAFAAkAAAAGAAUAAAAGAAsAAAAHAAUAAAAFAAkAAAAIAAUAAAAFAAsAAAAIAAQAAAAGAAkAAAAHAAQAAAAGAAoAAAAGAAQAAAAGAAsAAAAFAAQAAAAFAAsAAAAEAAQAAAAGAAoAAAADAAQAAAAGAAsAAAACAAQAAAAFAAoAAAABAAQAAAAGAAoAAAAAAAQAAAAFAAoAAAD//wQAAAAFAAsAAAD+/wQAAAAGAAsAAAD9/wQAAAAGAAoAAAD8/wQAAAAGAAkAAAD7/wQAAAAFAAsAAAD6/wQAAAAFAAoAAAD5/wQAAAAGAAoAAAD4/wQAAAAFAAkAAAD3/wQAAAAFAAkAAAD3/wMAAAAFAAoAAAD4/wMAAAAFAAkAAAD5/wMAAAAFAAoAAAD6/wMAAAAFAAsAAAD7/wMAAAAFAAoAAAD8/wMAAAAGAAoAAAD9/wMAAAAFAAoAAAD+/wMAAAAGAAsAAAD//wMAAAAFAAkAAAAAAAMAAAAFAAoAAAABAAMAAAAFAAkAAAACAAMAAAAFAAoAAAADAAMAAAAFAAoAAAAEAAMAAAAFAAoAAAAFAAMAAAAFAAsAAAAGAAMAAAAFAAkAAAAHAAMAAAAGAAkAAAAIAAMAAAAFAAoAAAAIAAIAAAAFAAoAAAAHAAIAAAAFAAoAAAAGAAIAAAAGAAoAAAAFAAIAAAAGAAsAAAAEAAIAAAAFAAsAAAADAAIAAAAFAAkAAAACAAIAAAAFAAoAAAABAAIAAAAGAAkAAAAAAAIAAAAGAAoAAAD//wIAAAAFAAkAAAD+/wIAAAAGAAkAAAD9/wIAAAAGAAkAAAD8/wIAAAAFAAoAAAD7/wIAAAAGAAsAAAD6/wIAAAAFAAkAAAD5/wIAAAAGAAoAAAD4/wIAAAAFAAkAAAD3/wIAAAAFAAkAAAD3/wEAAAAFAAoAAAD4/wEAAAAGAAoAAAD5/wEAAAAFAAoAAAD6/wEAAAAGAAkAAAD7/wEAAAAFAAkAAAD8/wEAAAAFAAkAAAD9/wEAAAAGAAsAAAD+/wEAAAAFAAkAAAD//wEAAAAGAAkAAAAAAAEAAAAFAAsAAAABAAEAAAAGAAkAAAACAAEAAAAFAAoAAAADAAEAAAAGAAoAAAAEAAEAAAAFAAsAAAAFAAEAAAAGAAkAAAAGAAEAAAAGAAsAAAAHAAEAAAAFAAsAAAAIAAEAAAAGAAsAAAAIAAAAAAAGAAsAAAAHAAAAAAAFAAsAAAAGAAAAAAAFAAsAAAAFAAAAAAAGAAkAAAAEAAAAAAAFAAoAAAADAAAAAAAFAAsAAAACAAAAAAAFAAoAAAABAAAAAAAGAAkAAAAAAAAAAAAGAAkAAAD//wAAAAAGAAoAAAD+/wAAAAAFAAkAAAD9/wAAAAAGAAsAAAD8/wAAAAAFAAkAAAD7/wAAAAAFAAoAAAD6/wAAAAAFAAkAAAD5/wAAAAAFAAsAAAD4/wAAAAAGAAoAAAD3/wAAAAAFAAoAAAD3////AAAGAAsAAAD3//7/AAAGAAkAAAD3//3/AAAFAAsAAAD3//z/AAAGAAsAAAD4//z/AAAGAAoAAAD5//z/AAAFAAoAAAD6//z/AAAFAAkAAAD7//z/AAAFAAoAAAD8//z/AAAGAAoAAAD9//z/AAAFAAoAAAD+//z/AAAGAAoAAAD///z/AAAFAAkAAAAAAPz/AAAFAAoAAAABAPz/AAAFAAsAAAACAPz/AAAFAAsAAAADAPz/AAAFAAoAAAAEAPz/AAAGAAkAAAAFAPz/AAAGAAkAAAAGAPz/AAAGAAsAAAAHAPz/AAAGAAoAAAAIAPz/AAAFAAsAAAAIAP3/AAAFAAoAAAAIAP7/AAAFAAsAAAAHAP7/AAAGAAsAAAAHAP//AAAFAAkAAAAGAP//AAAFAAkAAAAFAP//AAAGAAkAAAAEAP//AAAFAAkAAAADAP//AAAFAAkAAAACAP//AAAGAAkAAAABAP//AAAGAAkAAAAAAP//AAAFAAkAAAD/////AAAFAAkAAAD+////AAAGAAsAAAD9//7/AAAFAAsAAAD8//7/AAAFAAsAAAD7//7/AAAFAAkAAAD6//7/AAAGAAoAAAD5//7/AAAFAAsAAAD4////AAAFAAoAAAD5////AAAFAAoAAAD6////AAAGAAsAAAD7////AAAFAAkAAAD8////AAAGAAoAAAD9////AAAGAAoAAAAFAP7/AAAFAAoAAAAGAP7/AAAFAAoAAAAIAP//AAAGAAkAAAAHAP3/AAAFAAoAAAAGAP3/AAAGAAoAAAAFAP3/AAAFAAsAAAAEAP3/AAAGAAoAAAADAP3/AAAFAAsAAAACAP3/AAAFAAsAAAABAP3/AAAGAAsAAAAAAP3/AAAGAAsAAAD///3/AAAFAAkAAAD+//3/AAAFAAoAAAD9//3/AAAFAAoAAAD8//3/AAAFAAsAAAD7//3/AAAGAAsAAAD6//3/AAAGAAkAAAD5//3/AAAFAAkAAAD4//3/AAAGAAkAAAD+//7/AAAFAAkAAAD///7/AAAFAAkAAAAAAP7/AAAFAAkAAAABAP7/AAAGAAkAAAACAP7/AAAFAAsAAAADAP7/AAAGAAoAAAAEAP7/AAAFAAoAAAD4//7/AAAGAAkAAAA=")
tile_set = SubResource("TileSet_lbhrr")

[node name="Water" type="TileMapLayer" parent="." unique_id=241634385]
position = Vector2(146, -96)
tile_map_data = PackedByteArray("AAD3/wUAAAAFAAkAAAD4/wUAAAAGAAoAAAD5/wUAAAAFAAkAAAD6/wUAAAAFAAsAAAD7/wUAAAAFAAoAAAD8/wUAAAAFAAsAAAD9/wUAAAAFAAsAAAD+/wUAAAAFAAoAAAD//wUAAAAFAAsAAAAAAAUAAAAFAAsAAAABAAUAAAAFAAsAAAACAAUAAAAGAAsAAAADAAUAAAAGAAsAAAAEAAUAAAAGAAoAAAAFAAUAAAAFAAkAAAAGAAUAAAAGAAsAAAAHAAUAAAAFAAkAAAAIAAUAAAAFAAsAAAAIAAQAAAAGAAkAAAAHAAQAAAAGAAoAAAAGAAQAAAAGAAsAAAAFAAQAAAAFAAsAAAAEAAQAAAAGAAoAAAADAAQAAAAGAAsAAAACAAQAAAAFAAoAAAABAAQAAAAGAAoAAAAAAAQAAAAFAAoAAAD//wQAAAAFAAsAAAD+/wQAAAAGAAsAAAD9/wQAAAAGAAoAAAD8/wQAAAAGAAkAAAD7/wQAAAAFAAsAAAD6/wQAAAAFAAoAAAD5/wQAAAAGAAoAAAD4/wQAAAAFAAkAAAD3/wQAAAAFAAkAAAD3/wMAAAAFAAoAAAD4/wMAAAAFAAkAAAD5/wMAAAAFAAoAAAD6/wMAAAAFAAsAAAD7/wMAAAAFAAoAAAD8/wMAAAAGAAoAAAD9/wMAAAAFAAoAAAD+/wMAAAAGAAsAAAD//wMAAAAFAAkAAAAAAAMAAAAFAAoAAAABAAMAAAAFAAkAAAACAAMAAAAFAAoAAAADAAMAAAAFAAoAAAAEAAMAAAAFAAoAAAAFAAMAAAAFAAsAAAAGAAMAAAAFAAkAAAAHAAMAAAAGAAkAAAAIAAMAAAAFAAoAAAAIAAIAAAAFAAoAAAAHAAIAAAAFAAoAAAAGAAIAAAAGAAoAAAAFAAIAAAAGAAsAAAAEAAIAAAAFAAsAAAADAAIAAAAFAAkAAAACAAIAAAAFAAoAAAABAAIAAAAGAAkAAAAAAAIAAAAGAAoAAAD//wIAAAAFAAkAAAD+/wIAAAAGAAkAAAD9/wIAAAAGAAkAAAD8/wIAAAAFAAoAAAD7/wIAAAAGAAsAAAD6/wIAAAAFAAkAAAD5/wIAAAAGAAoAAAD4/wIAAAAFAAkAAAD3/wIAAAAFAAkAAAD3/wEAAAAFAAoAAAD4/wEAAAAGAAoAAAD5/wEAAAAFAAoAAAD6/wEAAAAGAAkAAAD7/wEAAAAFAAkAAAD8/wEAAAAFAAkAAAD9/wEAAAAGAAsAAAD+/wEAAAAFAAkAAAD//wEAAAAGAAkAAAAAAAEAAAAFAAsAAAABAAEAAAAGAAkAAAACAAEAAAAFAAoAAAADAAEAAAAGAAoAAAAEAAEAAAAFAAsAAAAFAAEAAAAGAAkAAAAGAAEAAAAGAAsAAAAHAAEAAAAFAAsAAAAIAAEAAAAGAAsAAAAIAAAAAAAGAAsAAAAHAAAAAAAFAAsAAAAGAAAAAAAFAAsAAAAFAAAAAAAGAAkAAAAEAAAAAAAFAAoAAAADAAAAAAAFAAsAAAACAAAAAAAFAAoAAAABAAAAAAAGAAkAAAAAAAAAAAAGAAkAAAD//wAAAAAGAAoAAAD+/wAAAAAFAAkAAAD9/wAAAAAGAAsAAAD8/wAAAAAFAAkAAAD7/wAAAAAFAAoAAAD6/wAAAAAFAAkAAAD5/wAAAAAFAAsAAAD4/wAAAAAGAAoAAAD3/wAAAAAFAAoAAAD3////AAAGAAsAAAD3//7/AAAGAAkAAAD3//3/AAAFAAsAAAD3//z/AAAGAAsAAAD4//z/AAAGAAoAAAD5//z/AAAFAAoAAAD6//z/AAAFAAkAAAD7//z/AAAFAAoAAAD8//z/AAAGAAoAAAD9//z/AAAFAAoAAAD+//z/AAAGAAoAAAD///z/AAAFAAkAAAAAAPz/AAAFAAoAAAABAPz/AAAFAAsAAAACAPz/AAAFAAsAAAADAPz/AAAFAAoAAAAEAPz/AAAGAAkAAAAFAPz/AAAGAAkAAAAGAPz/AAAGAAsAAAAHAPz/AAAGAAoAAAAIAPz/AAAFAAsAAAAIAP3/AAAFAAoAAAAIAP7/AAAFAAsAAAAHAP7/AAAGAAsAAAAHAP//AAAFAAkAAAAGAP//AAAFAAkAAAAFAP//AAAGAAkAAAAEAP//AAAFAAkAAAADAP//AAAFAAkAAAACAP//AAAGAAkAAAABAP//AAAGAAkAAAAAAP//AAAFAAkAAAD/////AAAFAAkAAAD+////AAAGAAsAAAD9//7/AAAFAAsAAAD8//7/AAAFAAsAAAD7//7/AAAFAAkAAAD6//7/AAAGAAoAAAD5//7/AAAFAAsAAAD4////AAAFAAoAAAD5////AAAFAAoAAAD6////AAAGAAsAAAD7////AAAFAAkAAAD8////AAAGAAoAAAD9////AAAGAAoAAAAFAP7/AAAFAAoAAAAGAP7/AAAFAAoAAAAIAP//AAAGAAkAAAAHAP3/AAAFAAoAAAAGAP3/AAAGAAoAAAAFAP3/AAAFAAsAAAAEAP3/AAAGAAoAAAADAP3/AAAFAAsAAAACAP3/AAAFAAsAAAABAP3/AAAGAAsAAAAAAP3/AAAGAAsAAAD///3/AAAFAAkAAAD+//3/AAAFAAoAAAD9//3/AAAFAAoAAAD8//3/AAAFAAsAAAD7//3/AAAGAAsAAAD6//3/AAAGAAkAAAD5//3/AAAFAAkAAAD4//3/AAAGAAkAAAD+//7/AAAFAAkAAAD///7/AAAFAAkAAAAAAP7/AAAFAAkAAAABAP7/AAAGAAkAAAACAP7/AAAFAAsAAAADAP7/AAAGAAoAAAAEAP7/AAAFAAoAAAD4//7/AAAGAAkAAAD5/wgAAQAAAAAAAAD4/wgAAQACAAAAAAD3/wgAAQAAAAAAAAD3/wcAAQAAAAAAAAD3/wkAAQAAAAAAAAD3/woAAQAAAAAAAAD4/wkAAQAAAAAAAAD5/wkAAQAAAAAAAAD6/wkAAQAAAAAAAAD7/wkAAQAAAAAAAAD8/wkAAQAAAAAAAAD9/wkAAQAAAAAAAAD+/wkAAQAAAAAAAAD//wkAAQAAAAAAAAD//wgAAQAAAAAAAAAAAAgAAQAAAAAAAAABAAgAAQAAAAAAAAACAAcAAQAAAAAAAAADAAcAAQAAAAAAAAAEAAcAAQAAAAAAAAAFAAcAAQAAAAAAAAAGAAcAAQAAAAAAAAAHAAcAAQAAAAAAAAAHAAYAAQAAAAAAAAAIAAYAAQAAAAAAAAAIAAcAAQAAAAAAAAAIAAgAAQAAAAAAAAAHAAgAAQAAAAAAAAAGAAgAAQAAAAAAAAAFAAgAAQAAAAEAAAAEAAgAAQAAAAEAAAAEAAkAAQACAAAAAAADAAkAAQAAAAAAAAACAAkAAQAAAAAAAAABAAkAAQAAAAAAAAAAAAkAAQAAAAAAAAACAAgAAQACAAAAAAADAAgAAQAAAAEAAAAIAAkAAQAAAAAAAAAIAAoAAQAAAAAAAAAHAAoAAQAAAAAAAAAGAAoAAQAAAAAAAAAFAAoAAQAAAAAAAAAEAAoAAQAAAAAAAAADAAoAAQAAAAAAAAACAAoAAQAAAAAAAAABAAoAAQAAAAAAAAAAAAoAAQAAAAAAAAD//woAAQAAAAAAAAD+/woAAQACAAAAAAD9/woAAQAAAAAAAAD8/woAAQAAAAAAAAD7/woAAQAAAAAAAAD6/woAAQAAAAAAAAD5/woAAQAAAAAAAAD4/woAAQAAAAAAAAAFAAkAAQAAAAAAAAAGAAkAAQAAAAAAAAAHAAkAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_lbhrr")

[node name="Layer2" type="TileMapLayer" parent="." unique_id=1444892691]
position = Vector2(2, 0)
tile_map_data = PackedByteArray("AAAAAPX/AAABABMAAAAAAPb/AAABABMAAAAAAPf/AAABABMAAAAAAPj/AAABABMAAAAAAPn/AAABABMAAAAAAPr/AAABABcAAAABAPX/AAABABMAAAABAPb/AAABABMAAAABAPf/AAABABMAAAABAPj/AAABABMAAAABAPn/AAABABMAAAABAPr/AAABABoAAAACAPX/AAABABMAAAACAPb/AAABABMAAAACAPf/AAABABMAAAACAPj/AAABABMAAAACAPn/AAABABMAAAADAPX/AAABABMAAAADAPb/AAABABMAAAADAPf/AAABABMAAAADAPj/AAABABMAAAADAPn/AAABABMAAAADAPr/AAABABoAAAAEAPX/AAACABUAAAAEAPb/AAABABUAAFAEAPf/AAABABUAAFAEAPj/AAACABYAAAAEAPn/AAACABYAAAAEAPr/AAACABoAAAAAAAAAAAABABQAAAABAAEAAAAAABQAAAACAAEAAAABABQAAAADAAEAAAAEAAwAAAADAAIAAAAAABQAAAAEAAIAAAABABQAAAAFAAIAAAABABQAAAAGAAIAAAABABQAAAAHAAIAAAABABQAAAAIAAIAAAACABQAAAAIAAEAAAADAAwAAAAJAAEAAAABABQAAAAKAAEAAAABABQAAAALAAEAAAABABQAAAAMAAEAAAABABQAAAANAAEAAAABABQAAAAOAAEAAAABABQAAAAPAAEAAAACABQAAAAPAAAAAAADAAwAAAAQAAAAAAACABQAAAAQAP//AAAGAAsAAAARAP//AAABABQAAAAOAAAAAAAGAAoAAAANAAAAAAAGAAoAAAAMAAAAAAAFAAkAAAALAAAAAAAGAAsAAAAKAAAAAAAGAAkAAAAJAAAAAAAGAAsAAAAIAAAAAAAGAAoAAAAHAAAAAAAGAAsAAAAGAAAAAAAFAAoAAAAGAAEAAAAGAAkAAAAHAAEAAAAGAAoAAAAFAAEAAAAGAAoAAAAEAAEAAAAGAAoAAAAEAAAAAAAFAAkAAAAFAAAAAAAGAAoAAAADAAAAAAAFAAkAAAACAAAAAAAGAAkAAAABAAAAAAAGAAoAAAACAPr/AAABABcAAAA=")
tile_set = SubResource("TileSet_lnu2h")

[node name="StaticBody2D" type="StaticBody2D" parent="." unique_id=55110593]
position = Vector2(145, -80)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" unique_id=1828244790]
position = Vector2(1, -22)
shape = SubResource("WorldBoundaryShape2D_uwrxv")

[node name="Cursor" parent="." unique_id=1791395191 instance=ExtResource("2_lnu2h")]
position = Vector2(145, -76)

[node name="Player" parent="." unique_id=1560998872 instance=ExtResource("1_uwrxv")]
top_level = true
position = Vector2(145, -76)

[node name="Camera2D" type="Camera2D" parent="Player" unique_id=510869600]
position = Vector2(0, -4)
zoom = Vector2(6, 6)

[node name="HUD" parent="." unique_id=1366750442 instance=ExtResource("4_lbhrr")]

[node name="Inventory" parent="HUD" unique_id=1808077272 instance=ExtResource("7_u5sy4")]
offset_left = 287.0
offset_top = 29.0
offset_right = 327.0
offset_bottom = 69.0

[node name="Hotbar" parent="HUD" unique_id=1417792194 instance=ExtResource("6_p57ef")]
offset_left = -304.0
offset_top = -96.0
offset_right = -264.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 0

[node name="StartScreen" parent="HUD" unique_id=708417317 instance=ExtResource("8_gee14")]

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=731352674]

[node name="FishingUI" type="Control" parent="CanvasLayer" unique_id=520759327]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="WaitingLabel" type="Label" parent="CanvasLayer/FishingUI" unique_id=1950125123]
layout_mode = 0
offset_left = 125.0
offset_top = -55.0
offset_right = 167.0
offset_bottom = -47.0
theme_override_font_sizes/font_size = 5
text = "Waiting for fish..."

[node name="CastingLabel" type="Label" parent="CanvasLayer/FishingUI" unique_id=1576788183]
layout_mode = 0
offset_left = 134.0
offset_top = -55.0
offset_right = 158.0
offset_bottom = -46.0
theme_override_font_sizes/font_size = 5
text = "Casting..."

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." unique_id=484387492]
stream = ExtResource("10_vtaks")
autoplay = true
